# scstarter

./: LICENSE.txt  README.md  pyproject.toml
src/scstarter/: __about__.py  __init__.py  exception.py  log.py
