[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


###############
### Project ###
###############

[project]
authors = [
  { name = "Aleksandr Egert", email = "9213855+kreigan@users.noreply.github.com" },
]
description = ''
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["structlog>=24.2.0"]
dynamic = ["version"]
keywords = []
license = "MIT"
name = "scstarter"
readme = "README.md"
requires-python = ">=3.12"


[project.urls]
Documentation = "https://github.com/kreigan/scstarter#readme"
Issues = "https://github.com/kreigan/scstarter/issues"
Source = "https://github.com/kreigan/scstarter"


################
### Coverage ###
################

[tool.coverage.paths]
scstarter = ["src/scstarter", "*/scstarter/src/scstarter"]
tests = ["tests", "*/scstarter/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
omit = ["src/scstarter/__about__.py"]
parallel = true
source_pkgs = ["scstarter", "tests"]


#############
### Hatch ###
#############

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/scstarter tests}"

[tool.hatch.version]
path = "src/scstarter/__about__.py"


############
### Ruff ###
############

[tool.ruff]
indent-width = 4
line-length = 110
src = ["src", "test"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.isort]
lines-between-types = 1
